Update description from 'Golang' to 'coding'

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Hello, I'm Bingxuan 👋</h1>
-    <p>This is my personal site where I share my Golang journey and projects.</p>
+    <p>This is my personal site where I share my coding journey and projects.</p>
   </body>
 </html>
